internal/templating/networkpolicy/test-resources/result-np-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    lagoon.sh/branch: environment-name
    lagoon.sh/version: v2.x.x
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: build-deploy-tool
    lagoon.sh/buildType: branch
    lagoon.sh/environment: environment-name
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
  name: isolation-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/environment
          operator: DoesNotExist
      podSelector: {}
  podSelector: {}
